leg.c
/* A recursive-descent parser generated by peg 0.1.2 */

#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#define YYRULECOUNT 36

# include "tree.h"
# include "version.h"

# include <stdio.h>
# include <stdlib.h>
# include <unistd.h>
# include <string.h>
# include <libgen.h>
# include <assert.h>

  typedef struct Header Header;

  struct Header {
    char   *text;
    Header *next;
  };

  FILE *input= 0;

  int   verboseFlag= 0;

  static int	 lineNumber= 0;
  static char	*fileName= 0;
  static char	*trailer= 0;
  static Header	*headers= 0;

  void makeHeader(char *text);
  void makeTrailer(char *text);

  void yyerror(char *message);

# define YY_INPUT(buf, result, max)		\
  {						\
    int c= getc(input);				\
    if ('\n' == c || '\r' == c) ++lineNumber;	\
    result= (EOF == c) ? 0 : (*(buf)= c, 1);	\
  }

# define YY_LOCAL(T)	static T
# define YY_RULE(T)	static T

#ifndef YY_VARIABLE
#define YY_VARIABLE(T)	static T
#endif
#ifndef YY_LOCAL
#define YY_LOCAL(T)	static T
#endif
#ifndef YY_ACTION
#define YY_ACTION(T)	static T
#endif
#ifndef YY_RULE
#define YY_RULE(T)	static T
#endif
#ifndef YY_PARSE
#define YY_PARSE(T)	T
#endif
#ifndef YYPARSE
#define YYPARSE		yyparse
#endif
#ifndef YYPARSEFROM
#define YYPARSEFROM	yyparsefrom
#endif
#ifndef YY_INPUT
#define YY_INPUT(buf, result, max_size)			\
  {							\
    int yyc= getchar();					\
    result= (EOF == yyc) ? 0 : (*(buf)= yyc, 1);	\
    yyprintf((stderr, "<%c>", yyc));			\
  }
#endif
#ifndef YY_BEGIN
#define YY_BEGIN	( yybegin= yypos, 1)
#endif
#ifndef YY_END
#define YY_END		( yyend= yypos, 1)
#endif
#ifdef YY_DEBUG
# define yyprintf(args)	fprintf args
#else
# define yyprintf(args)
#endif
#ifndef YYSTYPE
#define YYSTYPE	int
#endif

#ifndef YY_PART

typedef void (*yyaction)(char *yytext, int yyleng);
typedef struct _yythunk { int begin, end;  yyaction  action;  struct _yythunk *next; } yythunk;

YY_VARIABLE(char *   ) yybuf= 0;
YY_VARIABLE(int	     ) yybuflen= 0;
YY_VARIABLE(int	     ) yypos= 0;
YY_VARIABLE(int	     ) yylimit= 0;
YY_VARIABLE(char *   ) yytext= 0;
YY_VARIABLE(int	     ) yytextlen= 0;
YY_VARIABLE(int	     ) yybegin= 0;
YY_VARIABLE(int	     ) yyend= 0;
YY_VARIABLE(int	     ) yytextmax= 0;
YY_VARIABLE(yythunk *) yythunks= 0;
YY_VARIABLE(int	     ) yythunkslen= 0;
YY_VARIABLE(int      ) yythunkpos= 0;
YY_VARIABLE(YYSTYPE  ) yy;
YY_VARIABLE(YYSTYPE *) yyval= 0;
YY_VARIABLE(YYSTYPE *) yyvals= 0;
YY_VARIABLE(int      ) yyvalslen= 0;

YY_LOCAL(int) yyrefill(void)
{
  int yyn;
  while (yybuflen - yypos < 512)
    {
      yybuflen *= 2;
      yybuf= realloc(yybuf, yybuflen);
    }
  YY_INPUT((yybuf + yypos), yyn, (yybuflen - yypos));
  if (!yyn) return 0;
  yylimit += yyn;
  return 1;
}

YY_LOCAL(int) yymatchDot(void)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  ++yypos;
  return 1;
}

YY_LOCAL(int) yymatchChar(int c)
{
  if (yypos >= yylimit && !yyrefill()) return 0;
  if (yybuf[yypos] == c)
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchChar(%c) @ %s\n", c, yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchChar(%c) @ %s\n", c, yybuf+yypos));
  return 0;
}

YY_LOCAL(int) yymatchString(char *s)
{
  int yysav= yypos;
  while (*s)
    {
      if (yypos >= yylimit && !yyrefill()) return 0;
      if (yybuf[yypos] != *s)
        {
          yypos= yysav;
          return 0;
        }
      ++s;
      ++yypos;
    }
  return 1;
}

YY_LOCAL(int) yymatchClass(unsigned char *bits)
{
  int c;
  if (yypos >= yylimit && !yyrefill()) return 0;
  c= yybuf[yypos];
  if (bits[c >> 3] & (1 << (c & 7)))
    {
      ++yypos;
      yyprintf((stderr, "  ok   yymatchClass @ %s\n", yybuf+yypos));
      return 1;
    }
  yyprintf((stderr, "  fail yymatchClass @ %s\n", yybuf+yypos));
  return 0;
}

YY_LOCAL(void) yyDo(yyaction action, int begin, int end)
{
  while (yythunkpos >= yythunkslen)
    {
      yythunkslen *= 2;
      yythunks= realloc(yythunks, sizeof(yythunk) * yythunkslen);
    }
  yythunks[yythunkpos].begin=  begin;
  yythunks[yythunkpos].end=    end;
  yythunks[yythunkpos].action= action;
  ++yythunkpos;
}

YY_LOCAL(int) yyText(int begin, int end)
{
  int yyleng= end - begin;
  if (yyleng <= 0)
    yyleng= 0;
  else
    {
      while (yytextlen < (yyleng - 1))
	{
	  yytextlen *= 2;
	  yytext= realloc(yytext, yytextlen);
	}
      memcpy(yytext, yybuf + begin, yyleng);
    }
  yytext[yyleng]= '\0';
  return yyleng;
}

YY_LOCAL(void) yyDone(void)
{
  int pos;
  for (pos= 0;  pos < yythunkpos;  ++pos)
    {
      yythunk *thunk= &yythunks[pos];
      int yyleng= thunk->end ? yyText(thunk->begin, thunk->end) : thunk->begin;
      yyprintf((stderr, "DO [%d] %p %s\n", pos, thunk->action, yytext));
      thunk->action(yytext, yyleng);
    }
  yythunkpos= 0;
}

YY_LOCAL(void) yyCommit()
{
  if ((yylimit -= yypos))
    {
      memmove(yybuf, yybuf + yypos, yylimit);
    }
  yybegin -= yypos;
  yyend -= yypos;
  yypos= yythunkpos= 0;
}

YY_LOCAL(int) yyAccept(int tp0)
{
  if (tp0)
    {
      fprintf(stderr, "accept denied at %d\n", tp0);
      return 0;
    }
  else
    {
      yyDone();
      yyCommit();
    }
  return 1;
}

YY_LOCAL(void) yyPush(char *text, int count)	{ yyval += count; }
YY_LOCAL(void) yyPop(char *text, int count)	{ yyval -= count; }
YY_LOCAL(void) yySet(char *text, int count)	{ yyval[count]= yy; }

#endif /* YY_PART */

#define	YYACCEPT	yyAccept(yythunkpos0)

YY_RULE(int) yy_end_of_line(); /* 36 */
YY_RULE(int) yy_comment(); /* 35 */
YY_RULE(int) yy_space(); /* 34 */
YY_RULE(int) yy_braces(); /* 33 */
YY_RULE(int) yy_range(); /* 32 */
YY_RULE(int) yy_char(); /* 31 */
YY_RULE(int) yy_END(); /* 30 */
YY_RULE(int) yy_BEGIN(); /* 29 */
YY_RULE(int) yy_DOT(); /* 28 */
YY_RULE(int) yy_class(); /* 27 */
YY_RULE(int) yy_literal(); /* 26 */
YY_RULE(int) yy_CLOSE(); /* 25 */
YY_RULE(int) yy_OPEN(); /* 24 */
YY_RULE(int) yy_COLON(); /* 23 */
YY_RULE(int) yy_PLUS(); /* 22 */
YY_RULE(int) yy_STAR(); /* 21 */
YY_RULE(int) yy_QUESTION(); /* 20 */
YY_RULE(int) yy_primary(); /* 19 */
YY_RULE(int) yy_NOT(); /* 18 */
YY_RULE(int) yy_suffix(); /* 17 */
YY_RULE(int) yy_action(); /* 16 */
YY_RULE(int) yy_AND(); /* 15 */
YY_RULE(int) yy_prefix(); /* 14 */
YY_RULE(int) yy_BAR(); /* 13 */
YY_RULE(int) yy_sequence(); /* 12 */
YY_RULE(int) yy_SEMICOLON(); /* 11 */
YY_RULE(int) yy_expression(); /* 10 */
YY_RULE(int) yy_EQUAL(); /* 9 */
YY_RULE(int) yy_identifier(); /* 8 */
YY_RULE(int) yy_RPERCENT(); /* 7 */
YY_RULE(int) yy_end_of_file(); /* 6 */
YY_RULE(int) yy_trailer(); /* 5 */
YY_RULE(int) yy_definition(); /* 4 */
YY_RULE(int) yy_declaration(); /* 3 */
YY_RULE(int) yy__(); /* 2 */
YY_RULE(int) yy_grammar(); /* 1 */

YY_ACTION(void) yy_9_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_9_primary\n"));
   push(makePredicate("YY_END")); ;
}
YY_ACTION(void) yy_8_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_8_primary\n"));
   push(makePredicate("YY_BEGIN")); ;
}
YY_ACTION(void) yy_7_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_7_primary\n"));
   push(makeAction(yytext)); ;
}
YY_ACTION(void) yy_6_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_6_primary\n"));
   push(makeDot()); ;
}
YY_ACTION(void) yy_5_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_5_primary\n"));
   push(makeClass(yytext)); ;
}
YY_ACTION(void) yy_4_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_4_primary\n"));
   push(makeString(yytext)); ;
}
YY_ACTION(void) yy_3_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_3_primary\n"));
   push(makeName(findRule(yytext))); ;
}
YY_ACTION(void) yy_2_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_primary\n"));
   Node *name= makeName(findRule(yytext));  name->name.variable= pop();  push(name); ;
}
YY_ACTION(void) yy_1_primary(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_primary\n"));
   push(makeVariable(yytext)); ;
}
YY_ACTION(void) yy_3_suffix(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_3_suffix\n"));
   push(makePlus (pop())); ;
}
YY_ACTION(void) yy_2_suffix(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_suffix\n"));
   push(makeStar (pop())); ;
}
YY_ACTION(void) yy_1_suffix(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_suffix\n"));
   push(makeQuery(pop())); ;
}
YY_ACTION(void) yy_3_prefix(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_3_prefix\n"));
   push(makePeekNot(pop())); ;
}
YY_ACTION(void) yy_2_prefix(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_prefix\n"));
   push(makePeekFor(pop())); ;
}
YY_ACTION(void) yy_1_prefix(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_prefix\n"));
   push(makePredicate(yytext)); ;
}
YY_ACTION(void) yy_1_sequence(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_sequence\n"));
   Node *f= pop();  push(Sequence_append(pop(), f)); ;
}
YY_ACTION(void) yy_1_expression(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_expression\n"));
   Node *f= pop();  push(Alternate_append(pop(), f)); ;
}
YY_ACTION(void) yy_2_definition(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_2_definition\n"));
   Node *e= pop();  Rule_setExpression(pop(), e); ;
}
YY_ACTION(void) yy_1_definition(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_definition\n"));
   if (push(beginRule(findRule(yytext)))->rule.expression)
							    fprintf(stderr, "rule '%s' redefined\n", yytext); ;
}
YY_ACTION(void) yy_1_trailer(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_trailer\n"));
   makeTrailer(yytext); ;
}
YY_ACTION(void) yy_1_declaration(char *yytext, int yyleng)
{
  yyprintf((stderr, "do yy_1_declaration\n"));
   makeHeader(yytext); ;
}

YY_RULE(int) yy_end_of_line()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "end_of_line"));
  {  int yypos2= yypos, yythunkpos2= yythunkpos;  if (!yymatchString("\r\n")) goto l3;  goto l2;
  l3:;	  yypos= yypos2; yythunkpos= yythunkpos2;  if (!yymatchChar('\n')) goto l4;  goto l2;
  l4:;	  yypos= yypos2; yythunkpos= yythunkpos2;  if (!yymatchChar('\r')) goto l1;
  }
  l2:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "end_of_line", yybuf+yypos));
  return 1;
  l1:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "end_of_line", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_comment()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "comment"));  if (!yymatchChar('#')) goto l5;
  l6:;	
  {  int yypos7= yypos, yythunkpos7= yythunkpos;
  {  int yypos8= yypos, yythunkpos8= yythunkpos;  if (!yy_end_of_line()) goto l8;  goto l7;
  l8:;	  yypos= yypos8; yythunkpos= yythunkpos8;
  }  if (!yymatchDot()) goto l7;  goto l6;
  l7:;	  yypos= yypos7; yythunkpos= yythunkpos7;
  }  if (!yy_end_of_line()) goto l5;
  yyprintf((stderr, "  ok   %s @ %s\n", "comment", yybuf+yypos));
  return 1;
  l5:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "comment", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_space()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "space"));
  {  int yypos10= yypos, yythunkpos10= yythunkpos;  if (!yymatchChar(' ')) goto l11;  goto l10;
  l11:;	  yypos= yypos10; yythunkpos= yythunkpos10;  if (!yymatchChar('\t')) goto l12;  goto l10;
  l12:;	  yypos= yypos10; yythunkpos= yythunkpos10;  if (!yy_end_of_line()) goto l9;
  }
  l10:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "space", yybuf+yypos));
  return 1;
  l9:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "space", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_braces()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "braces"));
  {  int yypos14= yypos, yythunkpos14= yythunkpos;  if (!yymatchChar('{')) goto l15;
  l16:;	
  {  int yypos17= yypos, yythunkpos17= yythunkpos;  if (!yy_braces()) goto l17;  goto l16;
  l17:;	  yypos= yypos17; yythunkpos= yythunkpos17;
  }  if (!yymatchChar('}')) goto l15;  goto l14;
  l15:;	  yypos= yypos14; yythunkpos= yythunkpos14;
  {  int yypos18= yypos, yythunkpos18= yythunkpos;  if (!yymatchChar('}')) goto l18;  goto l13;
  l18:;	  yypos= yypos18; yythunkpos= yythunkpos18;
  }  if (!yymatchDot()) goto l13;
  }
  l14:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "braces", yybuf+yypos));
  return 1;
  l13:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "braces", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_range()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "range"));
  {  int yypos20= yypos, yythunkpos20= yythunkpos;  if (!yy_char()) goto l21;  if (!yymatchChar('-')) goto l21;  if (!yy_char()) goto l21;  goto l20;
  l21:;	  yypos= yypos20; yythunkpos= yythunkpos20;  if (!yy_char()) goto l19;
  }
  l20:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "range", yybuf+yypos));
  return 1;
  l19:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "range", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_char()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "char"));
  {  int yypos23= yypos, yythunkpos23= yythunkpos;  if (!yymatchChar('\\')) goto l24;  if (!yymatchClass((unsigned char *)"\000\000\000\000\204\040\000\000\000\000\000\070\146\100\124\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l24;  goto l23;
  l24:;	  yypos= yypos23; yythunkpos= yythunkpos23;  if (!yymatchChar('\\')) goto l25;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\017\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l25;  goto l23;
  l25:;	  yypos= yypos23; yythunkpos= yythunkpos23;  if (!yymatchChar('\\')) goto l26;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l26;
  {  int yypos27= yypos, yythunkpos27= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\000\000\377\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l27;  goto l28;
  l27:;	  yypos= yypos27; yythunkpos= yythunkpos27;
  }
  l28:;	  goto l23;
  l26:;	  yypos= yypos23; yythunkpos= yythunkpos23;
  {  int yypos29= yypos, yythunkpos29= yythunkpos;  if (!yymatchChar('\\')) goto l29;  goto l22;
  l29:;	  yypos= yypos29; yythunkpos= yythunkpos29;
  }  if (!yymatchDot()) goto l22;
  }
  l23:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "char", yybuf+yypos));
  return 1;
  l22:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "char", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_END()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "END"));  if (!yymatchChar('>')) goto l30;  if (!yy__()) goto l30;
  yyprintf((stderr, "  ok   %s @ %s\n", "END", yybuf+yypos));
  return 1;
  l30:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "END", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_BEGIN()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "BEGIN"));  if (!yymatchChar('<')) goto l31;  if (!yy__()) goto l31;
  yyprintf((stderr, "  ok   %s @ %s\n", "BEGIN", yybuf+yypos));
  return 1;
  l31:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "BEGIN", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_DOT()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "DOT"));  if (!yymatchChar('.')) goto l32;  if (!yy__()) goto l32;
  yyprintf((stderr, "  ok   %s @ %s\n", "DOT", yybuf+yypos));
  return 1;
  l32:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "DOT", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_class()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "class"));  if (!yymatchChar('[')) goto l33;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l33;
  l34:;	
  {  int yypos35= yypos, yythunkpos35= yythunkpos;
  {  int yypos36= yypos, yythunkpos36= yythunkpos;  if (!yymatchChar(']')) goto l36;  goto l35;
  l36:;	  yypos= yypos36; yythunkpos= yythunkpos36;
  }  if (!yy_range()) goto l35;  goto l34;
  l35:;	  yypos= yypos35; yythunkpos= yythunkpos35;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l33;  if (!yymatchChar(']')) goto l33;  if (!yy__()) goto l33;
  yyprintf((stderr, "  ok   %s @ %s\n", "class", yybuf+yypos));
  return 1;
  l33:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "class", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_literal()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "literal"));
  {  int yypos38= yypos, yythunkpos38= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\200\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l39;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l39;
  l40:;	
  {  int yypos41= yypos, yythunkpos41= yythunkpos;
  {  int yypos42= yypos, yythunkpos42= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\200\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l42;  goto l41;
  l42:;	  yypos= yypos42; yythunkpos= yythunkpos42;
  }  if (!yy_char()) goto l41;  goto l40;
  l41:;	  yypos= yypos41; yythunkpos= yythunkpos41;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l39;  if (!yymatchClass((unsigned char *)"\000\000\000\000\200\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l39;  if (!yy__()) goto l39;  goto l38;
  l39:;	  yypos= yypos38; yythunkpos= yythunkpos38;  if (!yymatchClass((unsigned char *)"\000\000\000\000\004\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l37;  yyText(yybegin, yyend);  if (!(YY_BEGIN)) goto l37;
  l43:;	
  {  int yypos44= yypos, yythunkpos44= yythunkpos;
  {  int yypos45= yypos, yythunkpos45= yythunkpos;  if (!yymatchClass((unsigned char *)"\000\000\000\000\004\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l45;  goto l44;
  l45:;	  yypos= yypos45; yythunkpos= yythunkpos45;
  }  if (!yy_char()) goto l44;  goto l43;
  l44:;	  yypos= yypos44; yythunkpos= yythunkpos44;
  }  yyText(yybegin, yyend);  if (!(YY_END)) goto l37;  if (!yymatchClass((unsigned char *)"\000\000\000\000\004\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000\000")) goto l37;  if (!yy__()) goto l37;
  }
  l38:;	
  yyprintf((stderr, "  ok   %s @ %s\n", "literal", yybuf+yypos));
  return 1;
  l37:;	  yypos= yypos0; yythunkpos= yythunkpos0;
  yyprintf((stderr, "  fail %s @ %s\n", "literal", yybuf+yypos));
  return 0;
}
YY_RULE(int) yy_CLOSE()
{  int yypos0= yypos, yythunkpos0= yythunkpos;
  yyprintf((stderr, "%s\n", "CLOSE"));  if (!yymatchChar(')')) goto l46;  if (!yy__()) goto l46;
  yyprintf((stderr, "  ok   %s @ %s\n", "CLOSE", yybuf+yypos));
  return 1;
  l46:;	  yypos= yypos0; yythunkpos= yythunkpos0;
